# MMATH_Thesis

./: .gitignore  .pre-commit-config.yaml  Doxyfile  README.md  config.ini  console.ipynb  install.sh  reinstall.sh  repo.sh  requirements.txt  tasks.py
MasterThesis2024_StefanoMagriniAlunno/: Thesis.acn  Thesis.acr  Thesis.alg  Thesis.amb  Thesis.aux  Thesis.bbl  Thesis.blg  Thesis.glg  Thesis.glo  Thesis.gls  Thesis.ist  Thesis.loe  Thesis.lof  Thesis.lot  Thesis.out  Thesis.tex  Thesis.toc  abstract.tex  acknowledgments.tex  bibliography.bib  glossary.tex
MasterThesis2024_StefanoMagriniAlunno/main/: Appendix.aux  Appendix.tex  Conclusion.aux  Conclusion.tex  ConclusionDiscussion.tex  Discussion.aux  Discussion.tex  Introduction.aux  Introduction.tex  LiteratureReview.aux  LiteratureReview.tex  Methodology.aux  Methodology.tex  Results.aux  Results.tex
MasterThesis2024_StefanoMagriniAlunno/main/literature_review/: DFT.tex  FuzzyClustering.tex  n_grams.tex
MasterThesis2024_StefanoMagriniAlunno/main/methodology/: Comparison.tex  DataSet.tex  Digitisation.tex  Synthesis.tex
archive/: distances.csv
archive/nestopcriteriae-9_6x6400_128_10/: distances.csv
archive/newstopcriteriae-6_3x3200_512_9/: console.ipynb  distances.csv
archive/newstopcriteriae-8_6x6_128_10/: distances.csv
archive/newstopcriteriae-8_6x6_32_18/: distances.csv
archive/oldstopcriteria0.1_4x4_1024/: distances.csv
assets/: done.py  error.py  install_screen.xcf
data/: console.ipynb  distances.csv
dev/: conf.ini  requirements.txt
dev/scripts/: help.sh  install.sh  prerequisites.sh
dev/scripts/AddOns/: build.sh  cuda_check.sh  make_doc.sh  pre_commit.sh
docs/source/: conf.py  index.rst  main.rst
scripts/: check_prerequisites.sh  make_docs.sh  periodogram.R
scripts/dev/: update_requirements.sh
source/: Makefile  console.ipynb  main.py
source/lib/clustering/: CMakeLists.txt  main.cpp
source/lib/clustering/inc/: fcm.h
source/lib/clustering/src/: cudafcm.cu  cxxfcm.cpp
source/lib/fcm/: CMakeLists.txt  main.cpp
source/lib/fcm/inc/: fcm.h
source/lib/fcm/src/: cudafcm.cu  cxxfcm.cpp
source/lib/synthesis/: CMakeLists.txt  main.c
source/lib/synthesis/inc/: synthesis.h
source/lib/synthesis/src/: csynthesis.c
source/projects/example/: CMakeLists.txt  example.c  main.c
source/projects/example/inc/: sum.h
source/projects/example/src/: sum.c
source/projects/synthesis/: CMakeLists.txt  main.c
source/projects/synthesis/inc/: synthesis.h
source/projects/synthesis/src/: csynthesis.c
tools/: jpg2pgm.py  png2pgm.py  seebin.py  studypgm.ipynb
